--- a/burrito-api/burrito-api.csproj
+++ b/burrito-api/burrito-api.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Utilities\Log.cs" />
     <Compile Include="Data Structures\ProjectCode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\StringExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
